@@ -210,6 +210,7 @@ int	zbx_db_connect(char *host, char *user, char *password, char *dbname, char *d
 			case CR_SERVER_GONE_ERROR:
 			case CR_CONNECTION_ERROR:
 			case CR_SERVER_LOST:
+			case CR_UNKNOWN_HOST:
 			case ER_SERVER_SHUTDOWN:
 			case ER_ACCESS_DENIED_ERROR:		/* wrong user or password */
 			case ER_ILLEGAL_GRANT_FOR_TABLE:	/* user without any privileges */
